# libavc

./: .gitignore  CMakeLists.txt  README.md
common/: asm_function.h  ithread.c
common/arm/: ih264_arm_memory_barrier.s  ih264_deblk_chroma_a9.s  ih264_deblk_luma_a9.s  ih264_default_weighted_pred_a9q.s  ih264_ihadamard_scaling_a9.s  ih264_inter_pred_chroma_a9q.s  ih264_inter_pred_filters_luma_horz_a9q.s  ih264_inter_pred_filters_luma_vert_a9q.s  ih264_inter_pred_luma_bilinear_a9q.s  ih264_inter_pred_luma_copy_a9q.s  ih264_inter_pred_luma_horz_hpel_vert_hpel_a9q.s  ih264_inter_pred_luma_horz_hpel_vert_qpel_a9q.s  ih264_inter_pred_luma_horz_qpel_a9q.s  ih264_inter_pred_luma_horz_qpel_vert_hpel_a9q.s  ih264_inter_pred_luma_horz_qpel_vert_qpel_a9q.s  ih264_inter_pred_luma_vert_qpel_a9q.s  ih264_intra_pred_chroma_a9q.s  ih264_intra_pred_luma_16x16_a9q.s  ih264_intra_pred_luma_4x4_a9q.s  ih264_intra_pred_luma_8x8_a9q.s  ih264_iquant_itrans_recon_a9.s  ih264_iquant_itrans_recon_dc_a9.s  ih264_mem_fns_neon.s  ih264_padding_neon.s  ih264_resi_trans_quant_a9.s  ih264_weighted_bi_pred_a9q.s  ih264_weighted_pred_a9q.s
common/armv8/: ih264_deblk_chroma_av8.s  ih264_deblk_luma_av8.s  ih264_default_weighted_pred_av8.s  ih264_ihadamard_scaling_av8.s  ih264_inter_pred_chroma_av8.s  ih264_inter_pred_filters_luma_horz_av8.s  ih264_inter_pred_filters_luma_vert_av8.s  ih264_inter_pred_luma_copy_av8.s  ih264_inter_pred_luma_horz_hpel_vert_hpel_av8.s  ih264_inter_pred_luma_horz_hpel_vert_qpel_av8.s  ih264_inter_pred_luma_horz_qpel_av8.s  ih264_inter_pred_luma_horz_qpel_vert_hpel_av8.s  ih264_inter_pred_luma_horz_qpel_vert_qpel_av8.s  ih264_inter_pred_luma_vert_qpel_av8.s  ih264_intra_pred_chroma_av8.s  ih264_intra_pred_luma_16x16_av8.s  ih264_intra_pred_luma_4x4_av8.s  ih264_intra_pred_luma_8x8_av8.s  ih264_iquant_itrans_recon_av8.s  ih264_iquant_itrans_recon_dc_av8.s  ih264_mem_fns_neon_av8.s  ih264_neon_macros.s  ih264_padding_neon_av8.s  ih264_resi_trans_quant_av8.s  ih264_weighted_bi_pred_av8.s  ih264_weighted_pred_av8.s
common/x86/: ih264_platform_macros.h
decoder/: ih264d_dpb_mgr.c
encoder/arm/: ih264e_evaluate_intra16x16_modes_a9q.s  ih264e_evaluate_intra4x4_modes_a9q.s  ih264e_evaluate_intra_chroma_modes_a9q.s  ih264e_fmt_conv.s  ih264e_half_pel.s  ime_distortion_metrics_a9q.s
encoder/armv8/: ih264e_evaluate_intra16x16_modes_av8.s  ih264e_evaluate_intra_chroma_modes_av8.s  ih264e_half_pel_av8.s  ime_distortion_metrics_av8.s
test/decoder/: main.c
